# flappybird

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Entry.cpp  Entry.h
app/src/main/cpp/Engine/: Debug.h  Engine.cpp  Engine.h  Log.h
app/src/main/cpp/Engine/Gl/: Attribute.cpp  Attribute.h  Buffer.cpp  Buffer.h  Draw.h  Error.h  Framebuffer.cpp  Framebuffer.h  Gl.h  Object.h  Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderFragment.cpp  ShaderFragment.h  ShaderVertex.cpp  ShaderVertex.h  Texture.cpp  Texture.h  Uniform.h
app/src/main/cpp/Engine/Math/: AABB2.h  Functions.h  RGB.h  RGBA.h  Size2.h  Vec2.h  Vec3.h  Vec4.h
app/src/main/cpp/Engine/Platform/: Context.h  Defs.h  Gl.h
app/src/main/cpp/Engine/Platform/Nonportable/: ContextAndroid.cpp  ContextAndroid.h  ContextGlfw.cpp  ContextGlfw.h
app/src/main/cpp/Engine/Util/: Assert.h  Event.h  MoveOnly.h  OffsetOf.h
app/src/main/cpp/Game/: Bird.cpp  Bird.h  Chunk.cpp  Chunk.h  Column.cpp  Column.h  Game.cpp  Game.h  ScreenRect.cpp  ScreenRect.h  World.cpp  World.h
app/src/main/cpp/Game/Shader/: Background.cpp  Background.h  Column.cpp  Column.h  PostAndBird.cpp  PostAndBird.h
app/src/main/cpp/Nonportable/: android_main.cpp  desktop_main.cpp
